--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- App & fonts-->
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:400,700">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/main.css">
-		<link rel="stylesheet" href="assets/css/responsive.css"><!--[if lt IE 9]>
+		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="https://zhagun.github.io/assets/css/main.css">
+		<link rel="stylesheet" href="https://zhagun.github.io/assets/css/responsive.css"><!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<![endif]-->
 	</head>
