--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<div class="grid-item__content-wrapper">
 											
 											<!-- work -->
-											<div class="work"><a href="https://zhagun.github.io/TrackMS">
+											<div class="work"><a href="https://zhagun.github.io/TruckMS">
 													
 													<!-- hoverbox ef-slide-bottom -->
 													<div class="hoverbox ef-slide-bottom light">
