--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
 									<div class="progress">
 										<h5 class="progress__title">design</h5>
 										<div class="progress__wrap">
-											<div class="progress__bar" data-progress-percent="33" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">39%</span>
+											<div class="progress__bar" data-progress-percent="40" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">39%</span>
 										</div>
 									</div><!-- End / progress -->
 									<div class="progress">
-										<h5 class="progress__title">design</h5>
+										<h5 class="progress__title">git</h5>
 										<div class="progress__wrap">
 											<div class="progress__bar" data-progress-percent="33" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">39%</span>
 										</div>
