--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
 						</div>
 						<!-- /.col-5 -->
 						<div class="col-12 col-lg-7">
-							<form id="form" class="contacts-form" name="form">
+							<form id="form" action="" class="contacts-form" name="form">
 								<input type="text" name="name" placeholder="Имя">
-								<input type="text" name="phone" placeholder="E-mail">
+								<input type="text" name="email" placeholder="E-mail">
 								<textarea name="text" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
 								<div class="contact-btn">
 								<button class="button" type="submit">Отправить</button>
@@ -376,6 +376,7 @@
 		<script type="text/javascript" src="assets/vendors/menu/menu.js"></script>
 		<script type="text/javascript" src="assets/vendors/typed/typed.min.js"></script>
 		<!-- App-->
+		<script type="text/javascript" src="assets/js/jquery.maskedinput.min.js"></script>
 		<script type="text/javascript" src="assets/js/main.js"></script>
 	</body>
 </html>
