--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 														
 														<!-- hb_back -->
 														<div class="hb_back">
-															<h2 class="work__title">Using Memes in Your Content</h2><span class="work__text">View detail</span>
+															<h2 class="work__title">В работе</h2><span class="work__text">Посмотреть детали</span>
 														</div><!-- End / hb_back -->
 														
 													</div><!-- End / hoverbox ef-slide-right -->
