--- a/goodcardboard/index.html
+++ b/goodcardboard/index.html
@@ -157,7 +157,7 @@
     						Производство упаковки из гофрокартона</h1>
     					<!-- /.main-text__title -->
     					<div class="main-text__subtitle">
-    						с доставкой по всей Росси
+    						с доставкой по всей России
     					</div>
     					<!-- /.main-text__subtitle -->
     					<div class="main-text__form">
