--- a/trgroup/index.html
+++ b/trgroup/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Road Track</title>
 </head>
@@ -52,12 +53,12 @@
             <div class="navBurger">
                 <div class="menu-block">
                     <nav class="menu-nav">
-                        <a class="menu-nav__link" href="#">О компании</a>
-                        <a class="menu-nav__link" href="#">Услуги</a>
-                        <a class="menu-nav__link" href="#">Преимушества</a>
-                        <a class="menu-nav__link" href="#">Схема работы</a>
-                        <a class="menu-nav__link" href="#">Партнеры</a>
-                        <a class="menu-nav__link" href="#">Контакты</a>
+                        <a class="menu-nav__link" href="#about">О компании</a>
+                        <a class="menu-nav__link" href="#service">Услуги</a>
+                        <a class="menu-nav__link" href="#advantages">Преимушества</a>
+                        <a class="menu-nav__link" href="#steps">Схема работы</a>
+                        <a class="menu-nav__link" href="#partners">Партнеры</a>
+                        <a class="menu-nav__link" href="#contact">Контакты</a>
                     </nav>
                     <a href="#" class="menu-btn">
                         <span></span>
@@ -70,19 +71,19 @@
                 <div class="col-12">
                     <ul class="main-nav">
                         <li>
-                            <a href="#">О компании</a>
+                            <a href="#about">О компании</a>
                         </li>
                         <li>
                             <a href="#service">Услуги</a>
                         </li>
                         <li>
-                            <a href="#company">Преимушества</a>
+                            <a href="#advantages">Преимушества</a>
                         </li>
                         <li>
-                            <a href="#price">Схема работы</a>
+                            <a href="#steps">Схема работы</a>
                         </li>
                         <li>
-                            <a href="#work">Партнеры</a>
+                            <a href="#partners">Партнеры</a>
                         </li>
                         <li>
                             <a href="#contact">Контакты</a>
@@ -92,7 +93,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <div class="main-info">
+                    <div class="main-info wow fadeIn">
                         <div class="main-info__title">
                             <span>Отправить</span> груз
                             <br> очень
@@ -106,7 +107,7 @@
 
         </div>
     </section>
-    <section class="information">
+    <section class="information" id="about">
         <div class="container">
             <div class="title">
                 <div class="title-text">О компании</div>
@@ -136,7 +137,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="service">
         <div class="container">
             <div class="title">
                 <div class="title-text">Наши услуги</div>
@@ -291,7 +292,7 @@
         <!-- /.container -->
     </section>
     <!-- /.offer -->
-    <section class="work">
+    <section class="work" id="advantages">
         <div class="container">
             <div class="title">
                 <div class="title-text">Работа с нами - это</div>
@@ -301,7 +302,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="0.2s">
                         <div class="work-block-img">
                             <img src="img/work/wallet.png" alt="wallet">
                         </div>
@@ -318,7 +319,7 @@
                 </div>
                 <!-- /.col-4 -->
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="0.4s">
                         <div class="work-block-img">
                             <img src="img/work/stopwatch.png" alt="">
                         </div>
@@ -335,7 +336,7 @@
                 </div>
                 <!-- /.col-4 -->
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="0.6s">
                         <div class="work-block-img">
                             <img src="img/work/support.png" alt="">
                         </div>
@@ -355,7 +356,7 @@
             <!-- /.row -->
             <div class="row">
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="0.6s">
                         <div class="work-block-img">
                             <img src="img/work/lock.png" alt="">
                         </div>
@@ -372,7 +373,7 @@
                 </div>
                 <!-- /.col-4 -->
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="0.8s">
                         <div class="work-block-img">
                             <img src="img/work/placeholder.png" alt="">
                         </div>
@@ -389,7 +390,7 @@
                 </div>
                 <!-- /.col-4 -->
                 <div class="col-12 col-md-4 col-lg-4">
-                    <div class="work-block">
+                    <div class="work-block wow fadeInUp" data-wow-delay="1s">
                         <div class="work-block-img">
                             <img src="img/work/file.png" alt="">
                         </div>
@@ -411,7 +412,7 @@
         <!-- /.container -->
     </section>
     <!-- /.work -->
-    <section class="steps">
+    <section class="steps" id="steps">
         <div class="container">
             <div class="title">
                 <div class="title-text">Как мы работаем?</div>
@@ -421,7 +422,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-4 col-md-4">
-                    <div class="steps-block">
+                    <div class="steps-block wow fadeInLeft">
                         <div class="steps-block-img">
                             <img src="img/steps/headphone.png" alt="">
                             <img class="arrow" src="img/steps/right-arrow.png" alt="">
@@ -437,7 +438,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 col-md-4">
-                    <div class="steps-block">
+                    <div class="steps-block wow bounceIn">
                         <div class="steps-block-img">
                             <img src="img/steps/calculator.png" alt="">
                             <img class="arrow" src="img/steps/right-arrow.png" alt="">
@@ -453,7 +454,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 col-md-4">
-                    <div class="steps-block">
+                    <div class="steps-block wow fadeInRight">
                         <div class="steps-block-img">
                             <img src="img/steps/hands.png" alt="">
                             <img class="arrow" src="img/steps/right-arrow.png" alt="">
@@ -467,7 +468,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-4 col-md-4">
-                    <div class="steps-block">
+                    <div class="steps-block wow fadeInLeft">
                         <div class="steps-block-img">
                             <img src="img/steps/delivery-truck.png" alt="">
                             <img class="arrow" src="img/steps/right-arrow.png" alt="">
@@ -479,7 +480,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 col-md-4">
-                    <div class="steps-block">
+                    <div class="steps-block wow bounceIn">
                         <div class="steps-block-img">
                             <img src="img/steps/contract.png" alt="">
                         </div>
@@ -490,7 +491,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 col-md-4 align-self-center">
-                    <div class="steps-img">
+                    <div class="steps-img wow fadeInRight">
                         <img src="img/header/logo.jpg" alt="">
                         <div class="steps-text">
                             Надежный партнер в сфере грузовых перевозок
@@ -502,7 +503,7 @@
         </div>
         </div>
     </section>
-    <section class="partners">
+    <section class="partners" id="partners">
         <div class="container">
             <div class="title">
                 <div class="title-text">Нам доверяют</div>
@@ -541,7 +542,7 @@
             </div>
         </div>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="contact">
         <div class="container">
             <div class="title">
                 <div class="title-text">Контакты</div>
@@ -610,6 +611,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="js/jquery.maskedinput.js"></script>
     <script src="slick/slick.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        wow = new WOW({
+            boxClass: 'wow', // default
+            animateClass: 'animated', // default
+            offset: 0, // default
+            mobile: false,
+            live: true // default
+        })
+        wow.init();
+    </script>
     <script>
         $(document).ready(function () {
             $('.services-slider').slick({
@@ -663,6 +675,10 @@
             $(this).toggleClass("menu-btn_active");
             $('.menu-nav').toggleClass("menu-nav_active");
         })
+        $(".menu-nav__link").unbind().click(function () {
+            $(".menu-nav").removeClass("menu-nav_active");
+            $(".menu-btn").removeClass("menu-btn_active");
+        });
     </script>
 </body>
 
