--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
                         </div>
                     </div>
                     <div class="awe-text-center mt-50">
-                        <a class="md-btn md-btn--outline-primary" href="#">Все работы
-                        </a>
+                        <a class="md-btn md-btn--outline-primary" href="#contact">Свяжитесь со мной </a>
                     </div>
                 </div>
             </section>
