--- a/trgroup/index.html
+++ b/trgroup/index.html
@@ -34,7 +34,7 @@
                             <img src="img/header/mail.png" alt="">
                             <span>info@trgroup.com</span>
                         </div>
-                        <div class="header-info__block">
+                        <div class="header-info__block popup-btn call">
                             <img src="img/header/support.png" alt="">
                             <span>Заказать звонок</span>
                         </div>
@@ -100,7 +100,7 @@
                             <span>просто</span>
                         </div>
                         <div class="main-info__subtitle">Перевоз грузов по всей европе</div>
-                        <button class="button">Отправить груз</button>
+                        <button class="button popup-btn">Отправить груз</button>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                     Наши специалисты помогут вам доставить ваши грузы в любую точку европы
                 </h3>
                 <!-- /.offer-info-subtitle -->
-                <button class="button">Быстрая заявка</button>
+                <button class="button popup-btn">Быстрая заявка</button>
                 <!-- /.button -->
             </div>
             <!-- /.offer-info -->
@@ -606,7 +606,37 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+
+    <!-- Модальное окно Заказать звонок -->
+    <div class="popup">
+        <!-- Само(белое) модальное окно -->
+        <div class="popup-dialog">
+            <!-- Содержимое модального окна -->
+            <div class="popup-content">
+                <button class="popup-close">&times;</button>
+                    <!-- Заголовок окна -->
+                    <h4 class="popup-header">
+                        Заказать звонок
+                    </h4>
+                    <div class="inquiry-form popup-form">
+                        <form class="form" action="mailer/smart.php" method="POST">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <input class="form-input text" name="user_name" required placeholder="Как Вас зовут?" id="name-5" type="text">
+                                    <input class="form-input text" name="user_phone" required placeholder="Номер телефона" id="phone-1" type="text">
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <button class="button blue-btn" type="submit" onclick="yaCounter47124246.reachGoal('bell-btn'); return true;">Заказать звонок</button>
+                            </div>
+                            <small>Нажав кнопку «Заказать звонок» <br>я даю согласие на обработку моих персональных данных.</small>
+                        </form>
+                    </div>
+
+                </div> <!-- /popup-content -->
+        </div> <!-- /popup-dialog -->
+    </div> <!-- /popup -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="js/jquery.maskedinput.js"></script>
@@ -668,6 +698,7 @@
 
         $(function () {
             $("#phone").mask("+7 (999) 999-99-99");
+            $("#phone-1").mask("+7 (999) 999-99-99");
         });
 
         $('.menu-btn').on('click', function (e) {
@@ -679,6 +710,20 @@
             $(".menu-nav").removeClass("menu-nav_active");
             $(".menu-btn").removeClass("menu-btn_active");
         });
+    </script>
+    <script>
+        $(document).ready(function(){
+            /*Модальное окно Заказать звонок*/
+            $('.popup-btn').on('click', function(event) {
+                event.preventDefault();
+                $('.popup').fadeIn();
+            });
+            $('.popup-close').on('click', function(event) {
+                event.preventDefault();
+                $('.popup').fadeOut();
+            });
+        });
+
     </script>
 </body>
 
