--- a/csrbtrans/index.html
+++ b/csrbtrans/index.html
@@ -286,12 +286,12 @@
                         <img class="latvia" src="img/countries/map-europe-names-latvia.png" alt="">
                         <img class="lithuania" src="img/countries/map-europe-names-lithuania.png" alt="">
                         <img class="niderlands" src="img/countries/map-europe-names-niderlands.png" alt="">
-                        <img class="uk" src="img/countries/map-europe-names-unk.png" alt="">
+                        <img class="hungary" src="img/countries/map-europe-names-hungary.png" alt="">
                         <img class="czech" src="img/countries/map-europe-names-czech.png" alt="">
                         <img class="italy" src="img/countries/map-europe-names-italy.png" alt="">
                         <img class="slovakia" src="img/countries/map-europe-names-slovakia.png" alt="">
                         <img class="austria" src="img/countries/map-europe-names-austria.png" alt="">
-                        <img class="hungary" src="img/countries/map-europe-names-hungary.png" alt="">
+                        <img class="uk" src="img/countries/map-europe-names-unk.png" alt="">
                         <img class="romania" src="img/countries/map-europe-names-romania.png" alt="">
                         <img class="denmark" src="img/countries/map-europe-names-denmark.png" alt="">
                         <img class="sweden" src="img/countries/map-europe-names-sweden.png" alt="">
@@ -513,7 +513,7 @@
                         objs_list_li[i].style.width = '0';
                         objs_list_li[i].style.height = '0';
                         objs_list_li[i].style.overflow = 'hidden';
-                        geo_m.style.background = `url(../img/countries/map-europe.png) no-repeat`;
+                        geo_m.style.background = "url(img/countries/map-europe.png) no-repeat";
                     }
 
                 }
