--- a/csrbtrans/index.html
+++ b/csrbtrans/index.html
@@ -228,7 +228,7 @@
                 <div class="col-auto">
                     <div class="info-block">
                         <img src="img/info/placeholder.png" alt="">
-                        <span>ul. Lipowa 19/21, 15-424 Białystok</span>
+                        <span>ul. Rabotnicha 2C, Białystok</span>
                     </div>
                 </div>
                 <div class="col-auto">
