--- a/csrbtrans/index.html
+++ b/csrbtrans/index.html
@@ -455,7 +455,7 @@
             <div class="col-12 align-items-center align-content-center">
                 <div class="documents-block">
 
-                    <a href="img/himkor.pdf" class="link-block" target="_blank">
+                    <a href="#" class="link-block" target="_blank">
                         Odpis aktualny z rejestru przedsiębiorców (KRS)
                     </a>
                 </div>
@@ -464,7 +464,7 @@
             <div class="col-12">
                 <div class="documents-block">
 
-                    <a href="img/himkor.pdf" class="link-block" target="_blank">
+                    <a href="#" class="link-block" target="_blank">
                         Zaświadczenie o nadaniu nr identyfikacji podatkowej (NIP)
                     </a>
                 </div>
@@ -472,7 +472,7 @@
             <div class="col-12">
                 <div class="documents-block">
 
-                    <a href="img/himkor.pdf" class="link-block" target="_blank">
+                    <a href="#" class="link-block" target="_blank">
                         Ubezpieczenie odpowiedzialności cywilnej spedytora
                     </a>
                 </div>
@@ -480,7 +480,7 @@
             <div class="col-12">
                 <div class="documents-block">
 
-                    <a href="img/himkor.pdf" class="link-block" target="_blank">
+                    <a href="#" class="link-block" target="_blank">
                         Licencja na wykonywanie transportu drogowego w zakresie pośrednictwa przy przewozie rzeczy
                     </a>
                 </div>
@@ -488,7 +488,7 @@
             <div class="col-12">
                 <div class="documents-block">
 
-                    <a href="img/himkor.pdf" class="link-block" target="_blank">
+                    <a href="#" class="link-block" target="_blank">
                         Zaświadczenie o nr identyfikacyjnym REGON
                     </a>
                 </div>
